tests/golden/errors/unknown_name.stderr
error[name]: unknown name `mystery`
  --> unknown_name.kso:2:11
   2 |   print "{mystery}"
                 ^
